@@ -13,13 +13,10 @@ import dormitoryfamily.doomz.domain.member.repository.MemberRepository;
 import dormitoryfamily.doomz.global.security.dto.PrincipalDetails;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
+import javax.security.auth.spi.LoginModule;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -75,21 +72,19 @@ public class FollowService {
         followingMember.decreaseFollowerCount();
     }
 
-    public MemberProfileListResponseDto getMyFollowingMemberList(PrincipalDetails principalDetails, Pageable pageable) {
+    public MemberProfileListResponseDto getMyFollowingMemberList(PrincipalDetails principalDetails) {
         Member loginMember = principalDetails.getMember();
-        Page<Follow> followings = followRepository.findAllByFollowerOrderByCreatedAtDesc(loginMember, pageable);
-        List<MemberProfileResponseDto> memberProfiles = followings.getContent().stream()
-                .map(follow -> MemberProfileResponseDto.fromEntity(follow.getFollowing()))
-                .collect(Collectors.toList());
-        return MemberProfileListResponseDto.toDto(followings, memberProfiles);
+        List<Follow> followings = followRepository.findAllByFollowerOrderByCreatedAtDesc(loginMember);
+        List<MemberProfileResponseDto> memberProfiles = followings.stream()
+                .map(follow -> MemberProfileResponseDto.fromEntity(follow.getFollowing())).toList();
+        return MemberProfileListResponseDto.toDto(memberProfiles);
     }
 
-    public MemberProfileListResponseDto getMyFollowerMemberList(PrincipalDetails principalDetails, Pageable pageable) {
+    public MemberProfileListResponseDto getMyFollowerMemberList(PrincipalDetails principalDetails) {
         Member loginMember = principalDetails.getMember();
-        Page<Follow> followers = followRepository.findAllByFollowingOrderByCreatedAtDesc(loginMember, pageable);
-        List<MemberProfileResponseDto> memberProfiles = followers.getContent().stream()
-                .map(follow -> MemberProfileResponseDto.fromEntity(follow.getFollower()))
-                .collect(Collectors.toList());
-        return MemberProfileListResponseDto.toDto(followers, memberProfiles);
+        List<Follow> followers = followRepository.findAllByFollowingOrderByCreatedAtDesc(loginMember);
+        List<MemberProfileResponseDto> memberProfiles = followers.stream()
+                .map(follow -> MemberProfileResponseDto.fromEntity(follow.getFollower())).toList();
+        return MemberProfileListResponseDto.toDto(memberProfiles);
     }
 }
